--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 # Byte-compiled / optimized / DLL files
-__pycache__/
+resources/__pycache__
+resources/__pycache__/*
+models/__pycache__
+models/__pycache__/*
+
 *.py[cod]
 *$py.class
 
